--- a/src/fund/templates/fund/index.html
+++ b/src/fund/templates/fund/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Fund List</title>
     <style>
+        body {
+            font-family: sans-serif;
+        }
         table {
             border-collapse: collapse;
             width: 100%;
@@ -46,7 +49,7 @@
         <tr>
             <td>{{ fund.fund.name }}</td>
             <td>{{ fund.strategy.description }}</td>
-            <td>{{ fund.amount }}</td> <td>{{ fund.inception|date:"Y-m-d" }}</td> </tr>
+            <td>{{ fund.amount|floatformat:"2g" }}</td> <td>{{ fund.inception|date:"Y-m-d" }}</td> </tr>
     {% empty %}
         <tr><td colspan="4">No funds available.</td></tr>
     {% endfor %}
